# halo2-pedersen-commitments

./: Cargo.toml
src/: chip.rs  circuit.rs  constants.rs  gadget.rs  lib.rs  utils.rs
src/constants/: fixed_bases.rs
src/constants/fixed_bases/: board_commit_v.rs
src/utils/: commit.rs  fixed_bases.rs  mod.rs
