[package]
name = "halo2-pedersen-commitment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
halo2_gadgets = { version = "0.2.0", features = ["test-dependencies"] }
halo2_proofs = "0.2.0"
proptest = { version = "1.0.0", optional = true }
plotters = { version = "0.3.4", default-features = false, optional = true }
json = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[features]
dev-graph = [
    "halo2_proofs/dev-graph",
    "plotters",
    "plotters/bitmap_backend",
    "plotters/bitmap_encoder",
]